# CryptoAutoPilot

./: .env.example  .replit  =0.15.0  FINDINGS.md  FIXES_APPLIED.md  INDEX.md  LAUNCH_FIX.md  LICENSE  QUICKSTART.md  QUICK_START.txt  README.md  README_ANALYSIS.md  README_RECOVERY.md  README_SOLUTION.md  SOLUTION.md  START_HERE.txt  advanced_recovery.py  analyze_shares.py  bitaps_shamir_analysis.md  bitaps_shamir_exploit_integration.md  bitcoin_nonce_advanced.py  bitcoin_nonce_attack.py  brute_force_third_share.py  config.json  config.py  conversation_export.txt  crypto_utils.py  debug_byte1.py  exploit_duplicate_coefficients.py  exploit_vulnerability.py  fast_search.py  final_recovery.py  find_nonce_collision.py  full_recovery.py  generate_third_share.py  launch.sh  launch_admin.bat  main.py  ml_cryptanalysis.py  nonce_reuse_analysis.py  (+23 more)
attached_assets/: Base58_1751453191305_1759166770081.java  BitcoinTransaction_1751453191306_1759166770082.java  ECDSAAttack_1751453191308_1759166844666.java  Main_1751453191309_1759166770082.java  Pasted-I-ve-analyzed-your-Bitcoin-Vulnerability-Scanner-codebase-and-identified-several-areas-for-improveme-1759166825801_1759166825802.txt  Pasted-Main-Problems-Quantum-code-isn-t-integrated-The-quantum-assault-py-exists-but-main-py-doesn-t--1759166951973_1759166951974.txt  ResultLogger_1751453142942_1759166844661.java  TransactionSignature_1751453142944_1759166844662.java  VulnerabilityDetector_1751453142947_1759166770080.java  WIFConverter_1751453142948_1759166844664.java
instance/: bitcoin_vulnerabilities.db
static/: app.js  style.css
(+6 files in other folders)
