[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ecdsa>=0.19.1",
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "tqdm>=4.67.1",
    "sqlalchemy>=2.0.41",
    "base58>=2.1.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "werkzeug>=3.1.3",
    "numpy>=2.3.0",
    "pycryptodome>=3.23.0",
]
